# KalDet

./: AUTHORS  CMakeLists.txt  Makefile  README  README.md
cmake/: KalDetConfig.cmake.in  KalDetConfigVersion.cmake.in  MacroRootDict.cmake
conf/: makejsf.tmpl
doc/: ReleaseNotes.md
ild/common/: ILDConeMeasLayer.cc  ILDConeMeasLayer.h  ILDCylinderHit.cc  ILDCylinderHit.h  ILDCylinderMeasLayer.cc  ILDCylinderMeasLayer.h  ILDDetectorIDs.h  ILDDiscMeasLayer.cc  ILDDiscMeasLayer.h  ILDMeasurementSurfaceStoreFiller.cc  ILDMeasurementSurfaceStoreFiller.h  ILDParallelPlanarMeasLayer.cc  ILDParallelPlanarMeasLayer.h  ILDParallelPlanarStripMeasLayer.cc  ILDParallelPlanarStripMeasLayer.h  ILDParallelStripPlanarMeasLayer.cc  ILDParallelStripPlanarMeasLayer.h  ILDPlanarHit.cc  ILDPlanarHit.h  ILDPlanarMeasLayer.cc  ILDPlanarMeasLayer.h  ILDPlanarStripHit.cc  ILDPlanarStripHit.h  ILDPolygonBarrelMeasLayer.cc  ILDPolygonBarrelMeasLayer.h  ILDRotatedTrapMeaslayer.cc  ILDRotatedTrapMeaslayer.h  ILDSegmentedDiscMeasLayer.cc  ILDSegmentedDiscMeasLayer.h  ILDSegmentedDiscStripMeasLayer.cc  ILDSegmentedDiscStripMeasLayer.h  ILDVMeasLayer.cc  ILDVMeasLayer.h  ILDVTrackHit.cc  ILDVTrackHit.h  MaterialDataBase.cc  MaterialDataBase.h
ild/ftd/: ILDFTDDiscBasedKalDetector.cc  ILDFTDDiscBasedKalDetector.h  ILDFTDKalDetector.cc  ILDFTDKalDetector.h
ild/lctpc/: LCTPCKalDetector.cc
ild/lctpc_test/: LCTPCCylinderMeasLayer.cc  LCTPCCylinderMeasLayer.h  LCTPCKalDetector.cc  LCTPCKalDetector.h
ild/set/: ILDSETKalDetector.cc  ILDSETKalDetector.h
ild/sit/: ILDSITCylinderKalDetector.cc  ILDSITCylinderKalDetector.h  ILDSITKalDetector.cc  ILDSITKalDetector.h
ild/support/: ILDSupportKalDetector.cc  ILDSupportKalDetector.h
ild/tpc/: ILDTPCKalDetector.cc  ILDTPCKalDetector.h
ild/vxd/: ILDVXDKalDetector.cc  ILDVXDKalDetector.h  NewILDVXDKalDetector.cc
kern/: EXHYBTrack.cxx  EXHYBTrack.h  EXVKalDetector.cxx  EXVKalDetector.h  EXVMeasLayer.cxx  EXVMeasLayer.h  Imakefile
lctpc/gearTPC/: EXTPCKalDetector.cxx  EXTPCMeasLayer.cxx  EXTPCMeasLayer.h  GearTPCCylinderHit.cxx  GearTPCCylinderMeasLayer.cxx  GearTPCHit.cxx  GearTPCKalDetector.cxx  GearTPCKalDetector.h  GearTPCMeasLayer.cxx  GearTPCMeasLayer.h
lctpc/lp1jgem/: EXTPCHit.cxx  EXTPCHit.h  EXTPCKalDetector.cxx  EXTPCKalDetector.h  EXTPCMeasLayer.cxx  EXTPCMeasLayer.h  Imakefile
othertpc/toytpc/: EXTPCHit.h  EXTPCKalDetector.cxx  EXTPCKalDetector.h  EXTPCMeasLayer.h  Imakefile
